PP-10511 Update openAPI spec for RCP
- Add descriptions and examples to parameters for AgreementResource
- Move annotations from fields to setters for consistency
- Update Api response descriptions for AgreementResource
